unpackaged/main/default/objects/LeanData__Journey__c/LeanData__Journey__c.object-meta.xml
<CustomObject>
    <label>(Deprecated) LeanData Journey</label>
    <nameField>
        <label>LeanData Journey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>(Deprecated) LeanData Journeys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>