unpackaged/main/default/objects/LeanData__Journey__c/fields/LeanData__Account__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Journey_Linked_Account</relationshipName>
    <type>Lookup</type>
</CustomField>