unpackaged/main/default/objects/LeanData__Journey__c/fields/LeanData__First_Marketing_Signal_Campaign__c.field-meta.xml
<CustomField>
    <fullName>LeanData__First_Marketing_Signal_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Marketing Signal Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipName>Journey_First_Marketing_Signal_Campaign</relationshipName>
    <type>Lookup</type>
</CustomField>