unpackaged/main/default/objects/LeanData__Journey__c/fields/LeanData__Number_Of_Members__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Number_Of_Members__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number Of Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>